# ec-postcode-lookup-pages

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Makefile  Pipfile  README.md  babel.cfg  package-lock.json  package.json  pyproject.toml  pytest.ini  renovate.json5  samconfig.toml  template.yaml
.circleci/: config.yml
.circleci/tests/: test_against_fqdn.py
.github/: dependabot.yml
.github/workflows/: codeql.yml
failover/: build.py  failover.html
lib/pages_mirror/: harvest.py
lib/response_builder/: setup.py
lib/response_builder/tests/: conftest.py  test_builders.py  test_factories.py  test_faker_providers.py  test_models.py
lib/response_builder/v1/: builders.py  sandbox.py
lib/response_builder/v1/factories/: ballots.py  base.py  candidates.py  councils.py  faker_providers.py
lib/response_builder/v1/generated_responses/: ballots.py
lib/response_builder/v1/models/: base.py  councils.py  polling_stations.py
lib/static_pages/: generate.py
lib/template_generator/: README.md  generate_base_template.py
postcode_lookup/: Makefile  __init__.py  app.py  dc_api_client.py  endpoints.py  lambda_basic_auth.py  middleware.py  mock_responses.py  models.py  postal_votes.py  related_content.py  requirements.txt  scheduled_elections.py  template_sorter.py  utils.py
postcode_lookup/data/: 20250501_postal_votes.csv  20260507_postal_votes.csv  pages.json
postcode_lookup/endpoints/: election_information.py  electoral_services_team.py  utils.py
postcode_lookup/locale/cy/LC_MESSAGES/: messages.mo  messages.po
postcode_lookup/static/css/: all.01687d9399ef2a4d6ec0e67be77bacb7.css  all.228eb7b84a4f17afaae0bf7b6f038e98.css  all.32bf79506ac7614ef040bddde95e86bc.css  all.5457b58a93b9936ed5ae3dc7cb3777f1.css  all.a012cae206abd66d681bff4f6c90f1be.css  all.b6245a1c0360da0fd50504e605ad3052.css  all.b851a2b81821e56093624f11617e53cc.css  all.cd82d69021c3306b9c90e59060cf14b5.css  all.d9bbe697d8a833c9d3e9c8d257aadaf1.css  print.27317c0656c19ff77bb3c1551982c6ba.css  print.5f9325f4fcf7f5347259a7397a1be4e8.css  print.css  print.debf6a29e26b24c67540731a0d97e596.css  screen.css  screen.d36922b3468f98dcac27f32f068133a3.css
postcode_lookup/static/js/: postcode-validation.js  scripts.210b8f1209047693f8409b970f41b7f8.js  scripts.231a41167c3b8c4704efb1d8cbb6844f.js  scripts.4741e771ec0a5c213fb34deb95bb8660.js  scripts.4f1ae080871a325210756132eceaee95.js  scripts.526f90e3ed6ab7f90382ae2e44bcf7bf.js  scripts.55b78b81b7066111cbd9587c5e6f9aac.js  scripts.7d2ff4217593a22aa1fbe41891f63351.js  scripts.8297d6c99cbdb374836f28edf5b2e2f9.js  scripts.987c3b609969ddaabd9b6d81665e448e.js  scripts.a2556774bba5de29292bf1c3e6bbc9fe.js  scripts.c38fc7ae670af67c8adf6816bac3547b.js  scripts.e5fdd2a93a4d1d8e2a61df42015a160d.js  scripts.e7dec860e364719a7b89a7ba5dff22b0.js  scripts.f29a4e79ff7f5de7e55ff8b95e2a70b4.js  scripts.f9ec79805767a234350879fcda39b1e6.js  scripts.js
postcode_lookup/templates/: address_picker.html  address_picker_nopostcode.html  base.html  base_cy.html  contact_details_index.html  contact_details_results.html  debug_page.html  design_system.html  electoral_services_team_results.html  electoral_services_team_search.html  index.html  old_result.html  postcode.html  result.html  results.html  results_multiple_dates.html  results_no_upcoming.html  results_one_current.html  results_one_current_date.html  section_tester.html  uprn.html
postcode_lookup/templates/includes/: ballot_model.html  ballots.html  cancellation_reasons.html  contact_details.html  contact_your_electoral_services.html  debug_top_bar.html  default_related_content.html  extra_header.html  feedback_section.html  flex_voting_2026_pilot.html  html_meta.html  language_picker.html  organisation_contact.html  parl_recall_petition.html  polling_station.html  postal_votes.html  referendum.html  registration_timetable.html  registration_timetable_city_of_london.html  registration_timetable_col.html  related_content.html  single_ballot.html  single_date.html  single_related_content.html
tests/: conftest.py  test_authorizer.py  test_basic_auth.py  test_dc_api_client.py  test_electoral_services_endpoints.py  test_frontend.py  test_middleware.py  test_models.py  test_registration.py  test_related_content.py  test_result.py  test_utils.py
